--- a/website/package.json
+++ b/website/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/yonnaklaassen/yonnaklaassen.github.io",
+  "homepage": "https://yonnaklaassen.github.io/yonnaklaassen.github.io",
   "name": "website",
   "version": "0.1.0",
   "private": true,
